# pdf-watermark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: image.yml
.sqlx/: query-78a297864805ef36bbc1b0d773cb33f4e48959226d1ee570bee79c3e42a2a477.json  query-82dc0a311c0ebc92c3492e24e283fc5ef98fc3bfbd9b386bae809f4f93e6fc37.json  query-b8db72c0540a6d17cc2af8ef25cbaf089d179821b2d72127884fa56e90eefe32.json  query-dda5a3f6ef2346fdde109e1cd120e0026cfc2a980a56b1dfd1214bb3850c1c13.json  query-e498a261ae30badf28b8d004b7d9187c617c1ca115835e2ba20ff4643c3bb49a.json
assets/config/: settings.default.toml
src/: error.rs  lib.rs  main.rs  settings.rs
src/controllers/: mod.rs
src/controllers/events/: event.rs  mod.rs
src/controllers/utils/: mark_pdf.rs  mod.rs
src/database/: event.rs
src/utils/: mod.rs  pdf_points.rs  text_width.rs
