[package]
name = "pdf-watermark"
version = "0.1.0"
edition = "2021"
default-run = "pdf-watermark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["multipart"] }
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0" }
futures = "0.3.30"
nalgebra = "0.32.5"
pdfium-render = "0.8.20"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
