[package]
name = "vatprc-uniapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0" }
futures = "0.3.30"
lopdf = "0.34.0"
nalgebra = "0.33.0"
phf = { version = "0.11.2", features = ["macros"] }
qpdf = { version = "0.3.1", features = ["vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "sqlite",
  "chrono",
  "uuid",
  "mysql",
] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.3", features = ["serde", "postgres", "uuid"] }
